--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "live reload",
     "livereload"
   ],
-  "activationEvents": [
-    "atom-aden:activate"
-  ],
   "repository": "https://github.com/kommander/atom-aden",
   "license": "proprietary",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "aden": "file:///Users/sebastian/aden"
+  },
+  "devDependencies": {
+    "eslint": "^2.13.1",
+    "eslint-config-airbnb": "^7.0.0",
+    "eslint-plugin-jsx-a11y": "^0.6.2",
+    "eslint-plugin-react": "^4.3.0"
+  }
 }
