--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
-    "aden": "file:///Users/sebastian/aden"
+    "aden": "^0.2.0-alpha.9"
   },
   "devDependencies": {
     "eslint": "^2.13.1",
